--- a/landon/css/landon.css
+++ b/landon/css/landon.css
@@ -29,7 +29,7 @@ div.tooltip {
 
 
 .USA.day{fill:rgb(255, 217, 217)}
-.USAlegend{background-color:rgb(255, 217, 217)}
+.USA_l{background-color:rgb(255, 217, 217)}
 
 .LosAngeles.day{fill:rgb(250, 250, 212)}
 .LosAngeles_l{background-color:rgb(250, 250, 212)}
