--- a/landon/css/landon.css
+++ b/landon/css/landon.css
@@ -27,6 +27,9 @@ div.tooltip {
   pointer-events: none;         
 }
 
+#legend {
+  width: 300px;
+}
 
 .USA.day{fill:rgb(255, 217, 217)}
 .USA_l{background-color:rgb(255, 217, 217)}
