--- a/landon/css/landon.css
+++ b/landon/css/landon.css
@@ -1,6 +1,7 @@
 body {
   font: 10px sans-serif;
   shape-rendering: crispEdges;
+  padding: 0 10px;  
 }
 
 .day {
@@ -14,26 +15,40 @@ body {
   stroke-width: 2px;
 }
 
-div.tooltip {   
-  position: absolute;           
-  text-align: center;           
-  width: 60px;                  
-  height: 28px;                 
-  padding: 2px;             
-  font: 12px sans-serif;        
-  background: lightsteelblue;   
-  border: 0px;      
-  border-radius: 8px;           
-  pointer-events: none;         
+.clearfix:before,
+.clearfix:after {
+    content: " "; /* 1 */
+    display: table; /* 2 */
+}
+
+.clearfix:after {
+    clear: both;
 }
 
 #legend {
   width: 150px;
-  padding: 5px;
+  font-size: 12px;
+  margin-bottom: 10px;
+}
+
+#legend > div {
+  line-height: 18px;
+}
+
+.legend-box {
+  height: 13px;
+  width: 13px;
+  border: 1px solid #ccc;
+  margin-right: 5px;
+  float: left;
+}
+
+#footer {
+  font-size: 14px;
 }
 
 .USA.day{fill:rgb(255, 217, 217)}
-.USA_l{background-color:rgb(255, 217, 217)}
+.USA_l{background-color:rgb(255, 217, 217);}
 
 .LosAngeles.day{fill:rgb(250, 250, 212)}
 .LosAngeles_l{background-color:rgb(250, 250, 212)}
